# qr

./: CMakeLists.txt  README.md
include/: qr.h
src/: error.c  error.h  module.c  qr.c  qr_write.c
test/: CMakeLists.txt  encoding_test.c  error_test.c  module_test.c
